--- a/src/main/webapp/CSS/contact.css
+++ b/src/main/webapp/CSS/contact.css
@@ -33,3 +33,12 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;    
+}
