--- a/src/main/webapp/CSS/login.css
+++ b/src/main/webapp/CSS/login.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+/* Css is from https://codepen.io/miroot/pen/qwIgC */
 
 body {
   background: #456;
